# TinkerTasker

./: .gitignore  CLAUDE.md  Makefile  README.md  TinkerTasker.code-workspace  python.mk
ai-core/: pyproject.toml
ai-core/src/ai_core/: agent.py  config.py  litelllm_completion.py  litellm_models.py  mcp_client.py  mcp_utils.py  prompts.py  schemas.py
ai-core/src/ai_core/mcp_servers/filesystem/: convert_bin_files.py  server.py
ai-core/src/ai_core/mcp_servers/web/: server.py
ai-core/tests/mcp_servers/filesystem/: test_filesystem.py
ai-core/tests/mcp_servers/filesystem/sample_files/: Sample Doc.docx
ai-core/tests/mcp_servers/web/: test_web.py
cli-ux/: Makefile  main.py  pyproject.toml
cli-ux/src/cli_ux/: config.py  main.py  schemas.py  setup.py  types.py  ux_utils.py
